fix jenkinsfile syntax error

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,28 +1,33 @@
-pipeline{
+pipeline {
     agent any
-
+    
+    environment {
+        DOCKER_IMAGE = "devops-demo-app"
+        CONTAINER_NAME = "devops-app-container"
+    }
+    
     stages {
-        stage('build'){
+        stage('Cleanup') {
             steps {
-                echo 'cleaning workspace...'
+                echo 'Cleaning workspace...'
                 cleanWs()
             }
         }
-
-        stage('checkout') {
+        
+        stage('Checkout') {
             steps {
-                echo 'cloning repositiory ...'
+                echo 'Cloning repository...'
                 checkout scm
             }
         }
-
-        stage('build docker image') {
+        
+        stage('Build Docker Image') {
             steps {
-                echo 'building docker images ...'
+                echo 'Building Docker image...'
                 sh 'docker build -t ${DOCKER_IMAGE}:latest .'
             }
         }
-
+        
         stage('Stop Old Container') {
             steps {
                 echo 'Stopping old container if exists...'
@@ -30,14 +35,14 @@ pipeline{
                 sh 'docker rm ${CONTAINER_NAME} || true'
             }
         }
-
+        
         stage('Deploy') {
             steps {
                 echo 'Deploying application...'
                 sh 'docker run -d -p 3000:3000 --name ${CONTAINER_NAME} ${DOCKER_IMAGE}:latest'
             }
         }
-
+        
         stage('Verify Deployment') {
             steps {
                 echo 'Verifying deployment...'
@@ -45,9 +50,8 @@ pipeline{
                 sh 'curl -f http://localhost:3000/health || exit 1'
             }
         }
-
     }
-
+    
     post {
         success {
             echo '✅ Pipeline completed successfully!'
@@ -55,6 +59,5 @@ pipeline{
         failure {
             echo '❌ Pipeline failed!'
         }
-
+    }
 }
-
